feat: update cv

--- a/style.css
+++ b/style.css
@@ -1,21 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  background-color: #a3b68a;
+  max-width: 1000px;
+  margin: 0 auto;
   font-size: 16px;
   line-height: 150%;
   font-weight: normal;
   font-family: "Lato", sans-serif;
-}
-
-.my-photo {
-  width: 170px;
-  border-radius: 20px;
+  background-color: #bbbbbb;
 }
 
 hr {
   color: #ffffff;
-  height: 2px;
+  height: 5px;
   background-color: #ffffff;
   border: none;
 }
@@ -29,7 +30,32 @@ a:hover {
   text-decoration: underline;
 }
 
-.container {
-  max-width: 1000px;
-  margin: auto;
+pre {
+  background-color: #ffdb58;
+  border-radius: 2px;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+  background-color: #3d365c;
+}
+
+.nav-link {
+  padding: 0 15px;
+  line-height: 50px;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.my-photo {
+  width: 180px;
+  border-radius: 5px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
 }
